--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -8,12 +8,18 @@
   height: 60px;
 }
 .black-button{
-  background-color:#ffffff;
-  color: black;
-  border-radius: 5px;
-  font-size: 1rem;
-  width: 90px;
-  height: 30px;
+  background-color: #fff;
+            color: #000000;
+            border-color: #000000;
+            padding: 0.5rem 1rem;
+            border-radius: 0.25rem;
+            cursor: pointer;
+  
+            &:hover {
+                background-color: #3742FA;
+                color: #fff;
+                border: none;
+            }
 }
 .navbar-logo {
   .logo-image {
@@ -50,5 +56,5 @@
 }
 
 .navbar-links a.selected {
-  border-bottom: 2px solid #ffffff; /* Add the desired underline style */
+  border-bottom: 2px solid #000000; /* Add the desired underline style */
 }
