--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -48,7 +48,9 @@
 
 .list-container {
   display: flex; 
-  justify-content:center; 
+  align-content: center;
+  margin-left: 100px;
+  margin-top: 20px;
 }
 
 .list-text {
@@ -58,4 +60,80 @@
   margin-right: 80px;
   margin-top: 20px;
   align-items: center;
+  display: flex;
+}
+.list-text img {
+  margin-right: 10px; 
+}
+
+.text-content {
+  flex-grow: 1; 
+}
+.container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.part1,
+.part2 {
+  flex: 1;
+  margin: 10px;
+  position: relative;
+}
+
+.part1 img,
+.part2 img {
+  width: 500px;
+  height: auto; /* Maintain aspect ratio */
+  display: block;
+  margin: 30px;
+}
+
+.part1 img {
+  margin-left: 100px;
+}
+
+.part2 img {
+  margin-right: 100px;
+}
+
+.image-texts {
+  position: absolute;
+  top: 20%;
+  left: 40%;
+  transform: translate(-50%, -50%);
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  width: 70%;
+  text-align: right;
+}
+.image-textz {
+  position: absolute;
+  top: 68%;
+  left: 60%;
+  transform: translate(-50%, -50%);
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  width: 70%;
+  text-align: left;
+}
+
+.bg-texts {
+  font-size: 20px;
+}
+
+.black-button {
+  background-color: #fff;
+            color: #000000;
+            border-color: #000000;
+            padding: 0.5rem 1rem;
+            border-radius: 0.25rem;
+            cursor: pointer;
+            left: 40%;
+  
+            &:hover {
+                background-color: #3742FA;
+                color: #fff;
+                border: none;
+            }
 }
