--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,26 +8,54 @@
       </div>
   </div>
   <div class="list-container">
-      <div class="list-text">
-        <img src="assets/icon1.png">
-          <h3><b>Free Shipping</b></h3>
-          <p>Shipping's on us!</p>
+    <div class="list-text">
+      <img src="assets/icon1.png">
+      <div class="text-content">
+        <label><b>Free Shipping</b></label><br>
+        <p>Shipping's on us!</p>
       </div>
-      <div class="list-text">
-        <img src="assets/icon2.png">
-        <h3><b>Cash On Delivery</b></h3>
+    </div>
+    <div class="list-text">
+      <img src="assets/icon2.png">
+      <div class="text-content">
+        <label><b>Cash On Delivery</b></label><br>
         <p>Pay on delivery.</p>
       </div>
-      <div class="list-text">
-        <img src="assets/icon3.png">
-        <h3><b>Customer Service</b></h3>
+    </div>
+    <div class="list-text">
+      <img src="assets/icon3.png">
+      <div class="text-content">
+        <label><b>Customer Service</b></label><br>
         <p>We're here for you.</p>
       </div>
-      <div class="list-text">
-        <img src="assets/icon4.png">
-        <h3><b>Best Quality</b></h3>
+    </div>
+    <div class="list-text">
+      <img src="assets/icon4.png">
+      <div class="text-content">
+        <label><b>Best Quality</b></label><br>
         <p>Quality guaranteed.</p>
       </div>
+    </div>
   </div>
-
+  <div class="container">
+    <div class="part1">
+      <img src="assets/home2.png" alt="Image 1">
+      <div class="image-texts">
+        <p class="bg-texts">Women ’ s<br> Collection</p>
+        <button class="black-button">Shop Now</button>
+    </div>
+      <img src="assets/home3.png" alt="Image 2">
+      <div class="image-textz">
+        <p class="bg-texts">Men ’ s<br> Collection</p>
+        <button class="black-button">Shop Now</button>
+    </div>
+    </div>
+    <div class="part2">
+      <img src="assets/home4.png" alt="Image 3">
+      <div class="image-texts">
+        <p class="bg-texts">Kids ’ s<br> Collection</p>
+        <button class="black-button">Shop Now</button>
+    </div>
+    </div>
+  </div>
 </app-layout>
