--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,1 +1,65 @@
-<p>about works!</p>
+<app-layout>
+    <div class="image-container">
+        <img src="assets/home.png" class="d-block w-100">
+        <div class="image-text">
+            <p class="bg-text">Find Your Style,<br> Be Yourself</p>
+            <button class="black-button">Shop Now</button>
+        </div>
+    </div>
+    <div class="list-container">
+      <div class="list-text">
+        <img src="assets/icon1.png">
+        <div class="text-content">
+          <label><b>Free Shipping</b></label><br>
+          <p>Shipping's on us!</p>
+        </div>
+      </div>
+      <div class="list-text">
+        <img src="assets/icon2.png">
+        <div class="text-content">
+          <label><b>Cash On Delivery</b></label><br>
+          <p>Pay on delivery.</p>
+        </div>
+      </div>
+      <div class="list-text">
+        <img src="assets/icon3.png">
+        <div class="text-content">
+          <label><b>Customer Service</b></label><br>
+          <p>We're here for you.</p>
+        </div>
+      </div>
+      <div class="list-text">
+        <img src="assets/icon4.png">
+        <div class="text-content">
+          <label><b>Best Quality</b></label><br>
+          <p>Quality guaranteed.</p>
+        </div>
+      </div>
+    </div>
+    <div>
+        <h2>Welcome to Belleza - Where Style Tells Your Story</h2>
+        <p class="test">In the vast landscape of fashion, Belleza is not just a store; it's a haven for self-expression. Since our founding in 2023, we've been on a mission to curate a collection that speaks to your individuality by blending the latest trends with timeless pieces. Belleza is more than fashion; it's about embracing confidence and empowering you to narrate your unique style journey.</p>
+        <br><h2>Our Journey of Style</h2>
+        <p class="test">Our story began with a simple idea - to create a virtual space where fashion enthusiasts could discover carefully chosen pieces that resonate with their personalities. Over time, Belleza has evolved into a community that cherishes diversity and celebrates the beauty of expressing oneself through fashion.</p>
+        <br><h2>What Makes Belleza Unique</h2>
+        <h3>Curating Trends</h3>
+        <p class="test">Belleza is not just about following trends; we set them. Our team, a group of style enthusiasts, is dedicated to bringing you a collection that's not only trendy but also timeless, ensuring that each piece adds a touch of allure to your wardrobe.</p>
+        <h3>Embracing Quality</h3>
+        <p class="test">In the fast-paced world of fashion, we understand the importance of quality. Every item in our collection undergoes strict quality checks, ensuring that you not only look good but also feel confident in your choice.</p>
+        <h3>Customer-Centric Approach</h3>
+        <p class="test">Your satisfaction is our priority. Our customer service team is here not just to assist you but to be your style companions. Whether you have questions, need advice, or require support with an order, we're just a message away.</p>
+        <br><h2>Elevating Your Experience with Belleza Services</h2>
+        <h3>Free Shipping</h3>
+        <p class="test">Enjoy the simplicity of free shipping on every order. Your chosen pieces will reach you without any additional costs, making your Belleza experience even more delightful.</p>
+        <h3>Cash On Delivery</h3>
+        <p class="test">For select locations, we offer Cash On Delivery (COD), allowing you to pay for your order in cash upon delivery, providing flexibility that complements your convenience.</p>
+        <h3>Customer Service</h3>
+        <p class="test">Our dedicated customer service team is more than a helpline; they are your partners in style. Reach out through our Contact Page or connect with us on social media for personalized service.</p>
+        <h3>Best Quality Guaranteed</h3>
+        <p class="test">Quality is not just a promise; it's ingrained in our foundation. Belleza guarantees the best quality products, ensuring that each piece meets the high standards our brand is known for.</p>
+        <br><h2>Our Vision for Your Style</h2>
+        <p class="test">Belleza dreams of a world where fashion is an expression of individuality. We aspire to be more than just a shopping destination; we want to be your trusted companion in exploring, expressing, and redefining your personal style.</p>
+        <br>
+        <p class="tests">Thank you for choosing Belleza as your style companion. We look forward to embarking on this stylish journey with you, celebrating confidence and individuality, one outfit at a time.</p>
+    </div>
+</app-layout>
