--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -3,7 +3,7 @@
         <img src="assets/home.png" class="d-block w-100">
         <div class="image-text">
             <p class="bg-text">Find Your Style,<br> Be Yourself</p>
-            <button class="black-button">Sign In</button>
+            <button class="black-button">Shop Now</button>
         </div>
     </div>
     <div class="list-container">
@@ -59,7 +59,7 @@
           </div>
       
           <div class="form-row">
-            <button class="button">Submit</button>
+            <button class="button1">Submit</button>
           </div>
         </div>
       
