--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -19,10 +19,10 @@
   
       <div class="footer-part">
         <h3>Services</h3>
-        <p><img src="assets/arrow.png"> Privacy Policy</p>
         <p><img src="assets/arrow.png"> Free Shipping</p>
         <p><img src="assets/arrow.png"> Cash On Delivery</p>
         <p><img src="assets/arrow.png"> Customer Service</p>
+        <p><img src="assets/arrow.png"> Best Quality</p>
       </div>
   
       <div class="footer-part">
