--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,7 +4,7 @@
       <img src="assets/home.png" class="d-block w-100">
       <div class="image-text">
           <p class="bg-text">Find Your Style,<br> Be Yourself</p>
-          <button class="black-button">Sign In</button>
+          <button class="black-button">Shop Now</button>
       </div>
   </div>
   <div class="list-container">
