--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -28,6 +28,7 @@
         cursor: pointer;
         border: none;
         font-size: 1rem;
+        margin-top: 40px;
   
         &:hover {
             background-color: #3742FA;
@@ -120,7 +121,7 @@
     border: 1px solid #ddd;
   }
 
-  .button {
+  .button1 {
     background-color: #2D3436;
     color: #fff;
     padding: 10px 20px;
