--- a/src/app/components/sellercollection/sellercollection.component.scss
+++ b/src/app/components/sellercollection/sellercollection.component.scss
@@ -1,12 +1,10 @@
 body {
     font-family: Arial, sans-serif;
     margin: 0;
-    padding: 0;
-    height: fit-content;
+    padding: 20px;
     background-color: #f1f2f6;
   }
 
-  
 
 :host {
     display: block;
