sellerCustomer UI done

--- a/src/app/components/sellerorders/sellerorders.component.html
+++ b/src/app/components/sellerorders/sellerorders.component.html
@@ -5,10 +5,10 @@
     <thead>
       <tr>
         <th>ID</th>
-        <th>created_at</th>
-        <th>total</th>
-        <th>updated_at</th>
-        <th>user_id</th>
+        <th>Created_at</th>
+        <th>Total</th>
+        <th>Updated_at</th>
+        <th>User Id</th>
         <th>Options</th>
       </tr>
     </thead>
