--- a/src/app/components/sellercustomers/sellercustomers.component.html
+++ b/src/app/components/sellercustomers/sellercustomers.component.html
@@ -1,1 +1,35 @@
-<p>sellercustomers works!</p>
+<app-layoutseller>
+    <body>
+        <div class="table-container">
+<table>
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Address</th>
+        <th>Email</th>
+        <th>Full Name</th>
+        <th>Phone</th>
+        <th>Username</th>
+        <th>Options</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let customer of customers">
+        <td>{{ customer.id }}</td>
+        <td>{{ customer.address }}</td>
+        <td>{{ customer.email }}</td>
+        <td>{{ customer.full_name }}</td>
+        <td>{{ customer.phone }}</td>
+        <td>{{ customer.username }}</td>
+        <td>
+          <button class="add" (click)="addCustomer()">Add</button>
+          <button class="update" (click)="updateCustomer(customer.id)">Update</button>
+          <button class="delete" (click)="deleteCustomer(customer.id)">Delete</button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+</body>
+</app-layoutseller>
+
