card-count updated

--- a/src/app/components/sellerhome/sellerhome.component.html
+++ b/src/app/components/sellerhome/sellerhome.component.html
@@ -3,19 +3,19 @@
         <div class="dashboard">
             <div class="dashboard-card" (click)="navigateToSellerCustomers()">
               <h2 class="card-title">Customers</h2>
-              <p class="card-count">120</p>
+              <p class="card-count">{{ customerCount$ | async }}</p>
             </div>
             <div class="dashboard-card" (click)="navigateToSellerOrders()">
               <h2 class="card-title">Orders</h2>
-              <p class="card-count">75</p>
+              <p class="card-count">{{ orderCount$ | async }}</p>
             </div>
             <div class="dashboard-card" (click)="navigateToSellerCollection()">
               <h2 class="card-title">Collection</h2>
-              <p class="card-count">50</p>
+              <p class="card-count">{{ collectionCount$ | async }}</p>
             </div>
             <div class="dashboard-card" (click)="navigateToSellerCategories()">
               <h2 class="card-title">Categories</h2>
-              <p class="card-count">90</p>
+              <p class="card-count">{{ categoryCount$ | async }}</p>
             </div>
           </div>
 </body>
