--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -12,9 +12,9 @@
       <div class="footer-part">
         <h3>Quick Links</h3>
         <p><img src="assets/arrow.png"> <a href="#">Search</a></p>
-        <p><img src="assets/arrow.png"> <a href="#">Collection</a></p>
-        <p><img src="assets/arrow.png"> <a href="#">About Us</a></p>
-        <p><img src="assets/arrow.png"> <a href="#">Contact</a></p>
+        <p><img src="assets/arrow.png"> <a href="collection">Collection</a></p>
+        <p><img src="assets/arrow.png"> <a href="about">About Us</a></p>
+        <p><img src="assets/arrow.png"> <a href="contact">Contact</a></p>
       </div>
   
       <div class="footer-part">
@@ -28,7 +28,7 @@
       <div class="footer-part">
         <h3> Get the Latest Fashion !</h3>
         <p>Sign in for exclusive updates and personalized styles.</p>
-        <button>Sign In</button>
+      <a href="login"><button>Sign In</button></a>
       </div>
     </div>
   </footer>
