--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,11 +3,11 @@
       <img src="assets/logo.png" alt="Belezza">
     </div>
     <nav class="navbar-links">
-      <a [class.selected]="selectedTab === 'home'" (click)="selectTab('home')" href="#">Home</a>
-      <a [class.selected]="selectedTab === 'collection'" (click)="selectTab('collection')" href="#">Collection</a>
-      <a [class.selected]="selectedTab === 'about'" (click)="selectTab('about')" href="#">About Us</a>
-      <a [class.selected]="selectedTab === 'contact'" (click)="selectTab('contact')" href="#">Contact</a>
+      <a [class.selected]="selectedTab === 'home'" (click)="selectTab('home')" href="home">Home</a>
+      <a [class.selected]="selectedTab === 'collection'" (click)="selectTab('collection')" href="collection">Collection</a>
+      <a [class.selected]="selectedTab === 'about'" (click)="selectTab('about')" href="about">About Us</a>
+      <a [class.selected]="selectedTab === 'contact'" (click)="selectTab('contact')" href="contact">Contact</a>
     </nav>
-    <button class="black-button">Sign In</button>
+    <a href="login"><button class="black-button" >Sign In</button></a>
   </header>
   
