--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -30,7 +30,7 @@
           <button type="submit" class="btn btn-click">SIGN UP</button>
           <div class="form-text text">
             Already have an account ?  
-            <a href="register" class="link-underline-primary register">Login</a>
+            <a href="login" class="link-underline-primary register">Login</a>
           </div>
         </fieldset>
       </div>
