--- a/src/app/components/navbarseller/navbarseller.component.html
+++ b/src/app/components/navbarseller/navbarseller.component.html
@@ -3,13 +3,13 @@
       <img src="assets/logo.png" alt="Belezza">
     </div>
     <nav class="navbar-links">
-      <a [class.selected]="selectedTab === 'home'" (click)="selectTab('home')" href="#">Home</a>
-      <a [class.selected]="selectedTab === 'collection'" (click)="selectTab('collection')" href="#">Collection</a>
-      <a [class.selected]="selectedTab === 'order'" (click)="selectTab('order')" href="#">Orders</a>
-      <a [class.selected]="selectedTab === 'customer'" (click)="selectTab('customer')" href="#">Customers</a>
-      <a [class.selected]="selectedTab === 'category'" (click)="selectTab('category')" href="#">Categories</a>
+      <a [class.selected]="selectedTab === 'home'" (click)="selectTab('home')" href="sellerhome">Home</a>
+      <a [class.selected]="selectedTab === 'collection'" (click)="selectTab('collection')" href="sellercollection">Collection</a>
+      <a [class.selected]="selectedTab === 'order'" (click)="selectTab('order')" href="sellerorders">Orders</a>
+      <a [class.selected]="selectedTab === 'customer'" (click)="selectTab('customer')" href="sellercustomers">Customers</a>
+      <a [class.selected]="selectedTab === 'category'" (click)="selectTab('category')" href="sellercategories">Categories</a>
     </nav>
     <div class="navbar-icons">
-        <img src="assets/user.png" alt="User">
+        <a href="user"><img src="assets/user.png" alt="User"></a>
     </div>
   </header>
