--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,22 +1,34 @@
 <app-layout>
   <div class="background-image">
     <div class="form-container">
-      <fieldset>
-        <legend>LOGIN</legend>
-        <div class="mb-3 text-center"> 
-          <label for="exampleFormControlInput1" class="form-label2">Username / Email</label><br>
-          <input type="email" class="form-control2" id="exampleFormControlInput1">
-        </div>
-        <div class="mb-3 text-center"> 
-          <label for="exampleInputPassword1" class="form-label2">Password</label><br>
-          <input type="password" class="form-control2" id="exampleInputPassword1">
-        </div>
-        <button type="submit" class="btn btn-click">LOGIN</button>
-        <div class="form-text text">
-          Don’t have an account? 
-          <a href="register" class="link-underline-primary register"> Sign Up</a>
-        </div>
-      </fieldset>
+      <form *ngIf="loginForm" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+        <fieldset>
+          <legend>LOGIN</legend>
+          <div class="mb-3 text-center"> 
+            <label for="exampleFormControlInput1" class="form-label2">Username / Email</label><br>
+            <input type="text" class="form-control2" id="exampleFormControlInput1" formControlName="usernameOrEmail">
+            <div *ngIf="loginForm?.get('usernameOrEmail')?.hasError('required') && loginForm?.get('usernameOrEmail')?.touched" class="text-danger">
+              Username is required.
+            </div>
+            <div *ngIf="loginForm?.get('username')?.hasError('email') && loginForm?.get('username')?.touched" class="text-danger">
+              Please enter a valid email address.
+            </div>
+          </div>
+          <div class="mb-3 text-center"> 
+            <label for="exampleInputPassword1" class="form-label2">Password</label><br>
+            <input type="password" class="form-control2" id="exampleInputPassword1" formControlName="password">
+            <div *ngIf="loginForm?.get('password')?.hasError('required') && loginForm?.get('password')?.touched" class="text-danger">
+              Password is required.
+            </div>
+          </div>
+          <button type="submit" class="btn btn-click">LOGIN</button>
+          <div *ngIf="loginError" class="text-danger">{{ loginError }}</div>
+          <div class="form-text text">
+            Don’t have an account? 
+            <a href="register" class="link-underline-primary register"> Sign Up</a>
+          </div>
+        </fieldset>
+      </form>
     </div>
   </div>
 </app-layout>
