--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -106,4 +106,9 @@
     margin-top: 15px;
     text-align: center;
   }
+  .text-danger{
+    font-size: small;
+    color: #eb3b5a;
+    text-align: center;
+    }
   
