--- a/src/app/components/sellercollection/sellercollection.component.scss
+++ b/src/app/components/sellercollection/sellercollection.component.scss
@@ -21,7 +21,7 @@ body {
   
   
   table {
-    width: 80%;
+    width: 90%;
     border-collapse: collapse;
     margin: 50px; 
     justify-content: center;
@@ -31,6 +31,7 @@ body {
     border: 1px solid #dddddd;
     text-align: left;
     padding: 8px;
+    width: fit-content;
   }
   
   th {
